--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
 
 if(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+	set(CMAKE_CXX_FLAGS_DEBUG "/ZI")
+	set(CMAKE_SHARED_LINKER_FLAGS "/SAFESEH:NO")
+	set(CMAKE_EXE_LINKER_FLAGS "/SAFESEH:NO")
 endif()
 
 include_directories( 
